--- a/yoga.css
+++ b/yoga.css
@@ -1,6 +1,6 @@
 /* First web page */
 .yoga1img{
-    background-image: url("https://www.asiadmc.com/sites/default/files/styles/blog_detail/public/field/image/article/7-Steps-to-a-Life-Long-Yoga-Practice-Youll-Love.jpg?itok=HS4TORI4");
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWbSktOrguhk_R5dXvIMfY1HR1fPWmtsXJIA&s");
     background-repeat:no-repeat;
     background-attachment:fixed;   
     background-size: cover;
